syntax = "proto3";

package inf.tokens;
option go_package = "github.com/influenzanet/user-management-service/pkg/api";

import "api/user.proto";

message TokenInfos {
  string id = 1; // User id
  string instance_id =
      2; // To which instance/country/high level group/ does the user belongs to
  int64 issued_at = 3;             // time of token generation in posix time
  map<string, string> payload = 4; // optional infos, e.g., role(s)
  string profil_id = 5;            // which subprofile of the user is selected
  bool account_confirmed = 6;      // e.g. if user verified email, phone address
  TempTokenInfo temp_token = 7; // in case user logged in with a temporary token
}

message TempTokenInfo {
  string token = 1;
  int64 expiration = 2;
  string purpose = 3;
  string user_id = 4;
  map<string, string> info = 5; // optional infos
  string instance_id = 6;
}

message TempTokenInfos { repeated TempTokenInfo temp_tokens = 1; }

message TempToken { string token = 1; }

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
  repeated inf.user.Profile profiles = 4;
  string selected_profile_id = 5;
  string preferred_language = 6;
}
