syntax = "proto3";

package inf.user_management_api;
option go_package = "github.com/influenzanet/user-management-service/pkg/api";

import "api/user.proto";
import "api/tokens.proto";
import "google/protobuf/empty.proto";

service UserManagementApi {
  rpc Status(google.protobuf.Empty) returns (ServiceStatus);

  // Auth and Token handling:
  rpc LoginWithEmail(LoginWithEmailMsg) returns (inf.tokens.TokenResponse);
  rpc LoginWithTempToken(JWTRequest) returns (inf.tokens.TokenResponse);
  rpc SignupWithEmail(SignupWithEmailMsg) returns (inf.tokens.TokenResponse);
  rpc SwitchProfile(SwitchProfileRequest) returns (inf.tokens.TokenResponse);
  rpc ValidateJWT(JWTRequest) returns (inf.tokens.TokenInfos);
  rpc RenewJWT(RefreshJWTRequest) returns (inf.tokens.TokenResponse);
  rpc RevokeAllRefreshTokens(RevokeRefreshTokensReq) returns (ServiceStatus);

  rpc VerifyContact(inf.tokens.TempToken) returns (inf.user.User);

  rpc ValidateAppToken(AppTokenRequest) returns (AppTokenValidation);

  // Temporary Tokens handling:
  rpc GenerateTempToken(inf.tokens.TempTokenInfo)
      returns (inf.tokens.TempToken);
  rpc GetTempTokens(inf.tokens.TempTokenInfo)
      returns (inf.tokens.TempTokenInfos); // by user_id, instance and/or type
  rpc DeleteTempToken(inf.tokens.TempToken) returns (ServiceStatus);
  rpc PurgeUserTempTokens(inf.tokens.TempTokenInfo) returns (ServiceStatus);

  // User properties:
  rpc GetUser(UserReference) returns (inf.user.User);

  // Account methods:
  rpc ChangePassword(PasswordChangeMsg) returns (ServiceStatus);
  rpc ChangeAccountIDEmail(EmailChangeMsg) returns (inf.user.User);
  rpc DeleteAccount(UserReference) returns (ServiceStatus);
  rpc ChangePreferredLanguage(LanguageChangeMsg) returns (inf.user.User);

  // PW reset:
  rpc InitiatePasswordReset(InitiateResetPasswordMsg) returns (ServiceStatus);
  rpc GetInfosForPasswordReset(GetInfosForResetPasswordMsg)
      returns (UserInfoForPWReset);
  rpc ResetPassword(ResetPasswordMsg) returns (inf.tokens.TokenResponse);

  // Profile methods:
  rpc SaveProfile(ProfileRequest)
      returns (inf.user.User); // add or update a profle
  rpc RemoveProfile(ProfileRequest) returns (inf.user.User);

  // Contacts:
  rpc UseUnsubscribeToken(inf.tokens.TempToken) returns (ServiceStatus);
  rpc UpdateContactPreferences(ContactPreferencesMsg) returns (inf.user.User);
  rpc AddEmail(ContactInfoMsg) returns (inf.user.User);
  rpc RemoveEmail(ContactInfoMsg) returns (inf.user.User);

  // Management Methods:
  rpc CreateUser(CreateUserReq) returns (inf.user.User);
  rpc AddRoleForUser(RoleMsg) returns (inf.user.User);
  rpc RemoveRoleForUser(RoleMsg) returns (inf.user.User);
  rpc FindNonParticipantUsers(FindNonParticipantUsersMsg) returns (UserListMsg);
  rpc StreamUsers(StreamUsersMsg) returns (stream inf.user.User);
}

/*
 * Status is typically used as a return value indicating if the method was
 * performed normally, or the system has any internal error e.g. checking system
 * status of a service
 */
message ServiceStatus {
  enum StatusValue {
    NORMAL = 0;
    PROBLEM = 1;
  }
  StatusValue status = 1;
  string msg = 2;
  string version = 3;
}

message SignupWithEmailMsg {
  string email = 1;
  string password = 2;
  string instance_id = 3;
  string preferred_language = 4;
  bool wants_newsletter = 5;
}

message LoginWithEmailMsg {
  string email = 1;
  string password = 2;
  string instance_id = 3;
  bool as_participant = 4;
}

message UserReference {
  inf.tokens.TokenInfos token = 1;
  string user_id = 2;
  string instance_id = 3;
}

message RevokeRefreshTokensReq { inf.tokens.TokenInfos token = 1; }

message RefreshTokenRequest {
  string user_id = 1;
  string instance_id = 2;
  string refresh_token = 3;
}

message AppTokenRequest { string token = 1; }
message AppTokenValidation { repeated string instances = 1; }

message SwitchProfileRequest {
  inf.tokens.TokenInfos token = 1;
  string profile_id = 2;
  string refresh_token = 3;
}

message ProfileRequest {
  inf.tokens.TokenInfos token = 1;
  inf.user.Profile profile = 2;
}

message UserAuthInfo {
  string user_id = 1;
  repeated string roles = 2;
  string instance_id = 3;
  string account_id = 4; // e.g. email address
  repeated inf.user.Profile profiles = 5;
  inf.user.Profile selected_profile = 6;
  bool account_confirmed = 7;
  string preferred_language = 8;
}

message PasswordChangeMsg {
  inf.tokens.TokenInfos token = 1;
  string old_password = 2;
  string new_password = 3;
}

message InitiateResetPasswordMsg { string account_id = 1; }
message GetInfosForResetPasswordMsg { string token = 1; }
message UserInfoForPWReset { string account_id = 1; }

message ResetPasswordMsg {
  string token = 1;
  string new_password = 2;
}

message EmailChangeMsg {
  inf.tokens.TokenInfos token = 1;
  string new_email = 2;
  bool keep_old_email = 3;
}

message LanguageChangeMsg {
  inf.tokens.TokenInfos token = 1;
  string language_code = 2;
}

message ContactPreferencesMsg {
  inf.tokens.TokenInfos token = 1;
  inf.user.ContactPreferences contact_preferences = 2;
}

message ContactInfoMsg {
  inf.tokens.TokenInfos token = 1;
  inf.user.ContactInfo contact_info = 2;
}

message JWTRequest { string token = 1; }

message RefreshJWTRequest {
  string refresh_token = 1;
  string access_token = 2;
}

message CreateUserReq {
  inf.tokens.TokenInfos token = 1;
  string account_id = 2;
  string initial_password = 3;
  string preferred_language = 4;
  repeated string roles = 5;
}

message RoleMsg {
  inf.tokens.TokenInfos token = 1;
  string account_id = 2;
  string role = 3;
}

message StreamUsersMsg { string instance_id = 1; }
message FindNonParticipantUsersMsg { inf.tokens.TokenInfos token = 1; }

message UserListMsg { repeated inf.user.User users = 1; }